Update taskfiles/Taskfile-common.yml.handlebars, taskfiles/Taskfile-build.yml.handlebars, taskfiles/Taskfile-darwin.yml.handlebars, taskfiles/Taskfile-fix.yml.handlebars, taskfiles/Taskfile-lint.yml.handlebars, taskfiles/Taskfile-linux.yml.handlebars, taskfiles/Taskfile-security.yml.handlebars, taskfiles/Taskfile-test.yml.handlebars files

--- a/taskfiles/Taskfile-common.yml.handlebars
+++ b/taskfiles/Taskfile-common.yml.handlebars
@@ -252,7 +252,7 @@ tasks:
         if [ "${container:=}" != 'docker' ]; then
           bash .common/log info "Running \"npm install\""
           npm install
-          npm audit fix --force
+          npm audit fix --force || true
           bash .common/log success "Successfully ran \"npm install\""
         fi
     sources:
