--- a/taskfiles/Taskfile-linux.yml.handlebars
+++ b/taskfiles/Taskfile-linux.yml.handlebars
@@ -22,7 +22,7 @@ tasks:
     cmds:
       - |
         if ! type \{{.SOFTWARE}} &> /dev/null; then # Prevent --force from reinstalling software
-          bash .common/log info "Using https://install.doctor to install '\{{.SOFTWARE}}'"
+          t info "Using https://install.doctor to install '\{{.SOFTWARE}}'"
           curl -sS https://install.doctor/\{{.SOFTWARE}} | bash
         fi
 
@@ -51,8 +51,8 @@ tasks:
     cmds:
       - |
         if ! type python3 &> /dev/null; then # Prevent --force from trying to reinstall Miniconda/Python 3
-          bash .common/log warn "Python 3 is missing from your computer"
-          bash .common/log log "Installing Python 3 rootlessly using Miniconda"
+          t warn "Python 3 is missing from your computer"
+          t log "Installing Python 3 rootlessly using Miniconda"
           curl -sS \{{.MINICONDA_DOWNLOAD_URL}} > miniconda.sh
           echo "miniconda.sh  \{{.MINICONDA_DOWNLOAD_CHECKSUM}}" | shasum -s -a 256 -c
           mkdir -p "$HOME/.local"
