--- a/package.json.handlebars
+++ b/package.json.handlebars
@@ -15,9 +15,15 @@
   },
   "version": "0.0.1",
   "scripts": {
+    "clean": "task common:clean",
     "commit": "git-cz",
     "postinstall": "if [ -d .git ]; then husky install; fi && if [ -f .husky/pre-commit ]; then chmod 755 .husky/pre-commit; fi",
-    "prepare-release": "task prepare-release"
+    "prepare-release": "task common:prepare-release",
+    "requirements": "task common:requirements",
+    "reset": "task common:reset",
+    "reset-force": "task common:reset-force",
+    "prepare-release": "task common:prepare-release",
+    "update": "task common:update"
   },
   "config": {
     "commitizen": {
