--- a/taskfiles/Taskfile-common.yml.handlebars
+++ b/taskfiles/Taskfile-common.yml.handlebars
@@ -347,7 +347,7 @@ tasks:
         find ./.common/files-\{{.REPOSITORY_SUBTYPE}} -type f -name "*.handlebars" | while read FILE; do
           hbs --data .variables.json "$FILE" --stdout > "${FILE%.*}" &
         done
-      - wait
+        wait
     sources:
       - .common/**/*.handlebars
       - .variables.json
