--- a/package.json.handlebars
+++ b/package.json.handlebars
@@ -71,7 +71,7 @@
       "prettier --write"
     ],
     "**/*.json": [
-      "check-json"
+      "check-json",
       "pretty-format-json --autofix"
     ],
     "**/*.md": [
