--- a/package.json.handlebars
+++ b/package.json.handlebars
@@ -16,8 +16,9 @@
   "version": "0.0.1",
   "scripts": {
     "clean": "task common:clean",
-    "commit": "git-cz",
-    "postinstall": "if [ -d .git ]; then husky install; fi && if [ -f .husky/pre-commit ]; then chmod 755 .husky/pre-commit; fi",
+    "commit": "task common:commit",
+    "info": "task --list",
+    "prepare": "bash .common/npm-prepare.js",
     "prepare-release": "task common:prepare-release",
     "requirements": "task common:requirements",
     "reset": "task common:reset",
@@ -34,9 +35,9 @@
   "devDependencies": {
     "@megabytelabs/prettier-config": "^1.0.0",
     "cz-conventional-changelog": "^3.3.0",
-    "husky": "^6.0.0",
     "inquirer": "^6.5.2",
     "prettier-plugin-sh": "^0.6.1",
+    "remark-preset-lint-recommended": "^5.0.0",
     "signale": "^1.4.0"
   },
   "engines": {
@@ -76,6 +77,7 @@
     ],
     "**/*.md": [
       "prettier --write",
+      "remark",
       "proselint --config .common/proselint.json"
     ],
     "**/*.(sh|sh.j2)": [
@@ -101,6 +103,11 @@
     ]
   },
   "prettier": "@megabytelabs/prettier-config",
+  "remarkConfig": {
+    "plugins": [
+      "remark-preset-lint-recommended"
+    ]
+  },
   "standard-version": {
     "scripts": {
       "prerelease": "git add --all"
