--- a/taskfiles/Taskfile-lint.yml.handlebars
+++ b/taskfiles/Taskfile-lint.yml.handlebars
@@ -18,9 +18,11 @@ tasks:
 {{#if hbs.dockerfile}}
       - docker
 {{/if}}
+      - markdown
 {{#if hbs.packer}}
       - packer
 {{/if}}
+      - private-keys
 {{#if hbs.python}}
       - python
 {{/if}}
@@ -57,27 +59,14 @@ tasks:
       - "**/*.yml"
 
 {{/if}}
-  formatting:
+  commit:
     deps:
-      - :npm:prettier
-    desc: Lint formatting using Prettier
-    summary: |
-      $ Report formatting errors with Prettier
-
-      This task will run Prettier on the project and list the possible fixes without automatically
-      applying the fixes. It will report mistakes like inconsistent indent lengths, trailing spaces,
-      and more. This task is a wrapper for the `npm run lint:prettier` command. It will use the configuration
-      specified in the `package.json` file under the `prettier` key.
-
-      If this command is incompatible with a file then you can add the file to the `.prettierignore`
-      file.
-
-      For more information on Prettier, see: https://prettier.io/
+      - :common:nodejs-dependencies
+      - :npm:commitlint
     cmds:
-      - prettier --list-different .
-      - prettier-package-json --list-different package.json
-    sources:
-      - "**/*.(css|html|js|json|less|md|mjml|php|scss|sh|ts|xml|yml)"
+      - commitlint --config .common/commitlint.config.js --edit "\{{.CLI_ARGS}}"
+    status:
+      - '[[ "\{{.CLI_ARGS}}" ]]'
 
 {{#if hbs.dockerfile}}
   docker:
@@ -124,11 +113,63 @@ tasks:
       - "**/(Dockerfile|Dockerfile.j2)"
 
 {{/if}}
+  formatting:
+    deps:
+      - :npm:prettier
+    desc: Lint formatting using Prettier
+    summary: |
+      $ Report formatting errors with Prettier
+
+      This task will run Prettier on the project and list the possible fixes without automatically
+      applying the fixes. It will report mistakes like inconsistent indent lengths, trailing spaces,
+      and more. This task is a wrapper for the `npm run lint:prettier` command. It will use the configuration
+      specified in the `package.json` file under the `prettier` key.
+
+      If this command is incompatible with a file then you can add the file to the `.prettierignore`
+      file.
+
+      For more information on Prettier, see: https://prettier.io/
+    cmds:
+      - prettier --list-different .
+      - prettier-package-json --list-different package.json
+    sources:
+      - "**/*.(css|html|js|json|less|md|mjml|php|scss|sh|ts|xml|yml)"
+
   lint-staged:
     deps:
       - :npm:lint-staged
     cmds:
       - lint-staged
+
+  markdown:
+    deps:
+      - :nodejs:dependencies
+      - :npm:remark
+    desc: Lint markdown files
+    summary: |
+      $ Lint markdown files
+
+      This task uses 'remark-lint' under the hood to provide markdown style recommendations.
+
+      Example scanning all markdown files:
+      > task lint:markdown
+
+      Example scanning single markdown file:
+      > task lint:markdown -- TEST.md
+
+      For more information on 'remark', see: https://github.com/remarkjs/remark
+
+      For more information on 'remark-lint', see: https://github.com/remarkjs/remark-lint
+    cmds:
+      - |
+        if [ -z "\{{.CLI_ARGS}}" ]; then
+          find . -type d \( \{{.IGNORE_FOLDERS}} \) -prune -o -type f \( -name \*.md \) -print0 |
+            xargs -0 -r -n1 remark
+        else
+          remark \{{.CLI_ARGS}}
+        fi
+    sources:
+      - "**/*.md"
 
   markdown-broken-links:
     deps:
