Update taskfiles/Taskfile-lint.yml.handlebars, taskfiles/Taskfile-linux.yml.handlebars, taskfiles/Taskfile-darwin.yml.handlebars, taskfiles/Taskfile-npm.yml.handlebars, taskfiles/Taskfile-image.yml.handlebars, package.json.handlebars files

--- a/package.json.handlebars
+++ b/package.json.handlebars
@@ -67,6 +67,9 @@
     "**/*.(css|html|json|less|mjml|php|scss|sh|ts)": [
       "prettier --write"
     ],
+    "**/*.(jpg|png)": [
+      "task image:compress --"
+    ],
     "**/*.js": [
       "npx standard --fix",
       "prettier --write"
