Update package.json.handlebars, requirements.txt files

--- a/package.json.handlebars
+++ b/package.json.handlebars
@@ -59,6 +59,7 @@
   ],
   "lint-staged": {
     "**/*": [
+      "blocklint --wordlist blacklist,slave,whitelist",
       "check-merge-conflict",
       "check-added-large-files",
       "check-symlinks",
