--- a/taskfiles/Taskfile-common.yml.handlebars
+++ b/taskfiles/Taskfile-common.yml.handlebars
@@ -137,7 +137,7 @@ tasks:
       - package.json
       - package-lock.json
     status:
-      - 'test -d node_modules || [ "${container:=}" == 'docker' ]'
+      - 'test -d node_modules || [ "${container:=}" == "docker" ]'
     preconditions:
       - sh: "test -f package.json"
         msg: "The package.json file appears to be missing!"
