--- a/taskfiles/Taskfile-lint.yml.handlebars
+++ b/taskfiles/Taskfile-lint.yml.handlebars
@@ -469,7 +469,7 @@ tasks:
       Example scanning all '**/*.yml' files:
       > task lint:yaml
 
-      Example scanning specific file':
+      Example scanning specific file:
       > task lint:yaml -- myfile.sh
 
       For more information on YAML Lint, see: https://github.com/adrienverge/yamllint
