--- a/package.json.handlebars
+++ b/package.json.handlebars
@@ -7,11 +7,11 @@
   "type": "module",
   "repository": {
     "type": "git",
-    "url": "git+{{repo}}.git"
+    "url": "git+{{repository.github}}.git"
   },
   "bugs": {
     "email": "{{email.help}}",
-    "url": "{{repo}}{{repository.location.issues}}"
+    "url": "{{repository.gitlab}}{{repository.location.issues.gitlab}}"
   },
   "version": "0.0.1",
   "scripts": {
