--- a/taskfiles/Taskfile-common.yml.handlebars
+++ b/taskfiles/Taskfile-common.yml.handlebars
@@ -90,7 +90,7 @@ tasks:
       - nodejs-dependencies
     cmds:
       - |
-        if [ -d .git ]; then
+        if [ -d .git ] && [ "${container:=}" != 'docker' ]; then
           husky install
         else
           true error "Cannot run 'husky install' because there is no '.git/' folder"
@@ -105,7 +105,7 @@ tasks:
         vars:
           FILE: .husky/prepare-commit-msg
     status:
-      - '[ "${container:=}" == "docker" ]'
+      - '[ "${container:=}" == 'docker' ]'
 
   husky-executable:
     cmds:
