--- a/taskfiles/Taskfile-common.yml.handlebars
+++ b/taskfiles/Taskfile-common.yml.handlebars
@@ -105,7 +105,7 @@ tasks:
         vars:
           FILE: .husky/prepare-commit-msg
     status:
-      - '[ "${container:=}" == 'docker' ]'
+      - '[ "${container:=}" == "docker" ]'
 
   husky-executable:
     cmds:
