Update taskfiles/Taskfile-git.yml.handlebars, taskfiles/Taskfile-linux.yml.handlebars, taskfiles/Taskfile-darwin.yml.handlebars files

--- a/taskfiles/Taskfile-linux.yml.handlebars
+++ b/taskfiles/Taskfile-linux.yml.handlebars
@@ -29,6 +29,15 @@ tasks:
     status:
       - type exiftool &> /dev/null
 
+  gh:
+    cmds:
+      - task: install-doctor
+        vars:
+          SOFTWARE: gh
+    run: once
+    status:
+      - type gh &> /dev/null
+
   git:
     cmds:
       - task: install-doctor
@@ -46,6 +55,15 @@ tasks:
     run: once
     status:
       - type gitleaks &> /dev/null
+
+  glab:
+    cmds:
+      - task: install-doctor
+        vars:
+          SOFTWARE: glab
+    run: once
+    status:
+      - type glab &> /dev/null
 
   install-doctor:
     cmds:
@@ -65,6 +83,15 @@ tasks:
     run: once
     status:
       - type jq &> /dev/null
+
+  lab:
+    cmds:
+      - task: install-doctor
+        vars:
+          SOFTWARE: lab
+    run: once
+    status:
+      - type lab &> /dev/null
 
   node:
     cmds:
